--- a/config.py.ipynb
+++ b/config.py.ipynb
@@ -1,10 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Import dependencies"
+    "host = 'localhost'\n",
+    "username = 'postgres'\n",
+    "password = 1043"
    ]
   },
   {
@@ -12,24 +16,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from config import host\n",
-    "from config import username\n",
-    "from config import password"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sqlalchemy import create_engine\n",
-    "from database import user_name, password, host, data_base"
-   ]
+   "source": []
   }
  ],
  "metadata": {
