--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -9,13 +9,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config import host\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "from config import password\n",
     "from config import username\n",
-    "from config import password"
+    "from config import host\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Engine and Pass in PostgreSQL Connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(f'postgresql://{username}:{password}@{host}:5432/emploee_SQL')\n",
+    "connection = engine.connect()"
    ]
   },
   {
@@ -23,13 +44,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sqlalchemy import create_engine\n",
-    "from database import user_name, password, host, data_base"
-   ]
+   "source": []
   }
  ],
  "metadata": {
