--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -640,6 +640,230 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Combine above table and salary tables on employee number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>emp_title</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>473302</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-07-25</td>\n",
+       "      <td>Hideyuki</td>\n",
+       "      <td>Zallocco</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-04-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>421786</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-09-28</td>\n",
+       "      <td>Xiong</td>\n",
+       "      <td>Verhoeff</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1987-11-26</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>273487</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-04-14</td>\n",
+       "      <td>Christoph</td>\n",
+       "      <td>Parfitt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1991-06-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>56087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>246449</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1958-03-23</td>\n",
+       "      <td>Subbu</td>\n",
+       "      <td>Bultermann</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1988-03-25</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>87084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48085</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-01-19</td>\n",
+       "      <td>Venkatesan</td>\n",
+       "      <td>Gilg</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993-06-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>63016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>441662</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-02-08</td>\n",
+       "      <td>Hongzhu</td>\n",
+       "      <td>Chenney</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1992-07-07</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>56350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>41986</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1956-05-11</td>\n",
+       "      <td>Conal</td>\n",
+       "      <td>Wilfing</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-09-18</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>67430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>11012</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-09-12</td>\n",
+       "      <td>Taegyun</td>\n",
+       "      <td>Speckmann</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1986-12-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>72092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>67762</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1952-07-27</td>\n",
+       "      <td>Jeanna</td>\n",
+       "      <td>Francisci</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-08-21</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>43430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>484430</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1959-08-10</td>\n",
+       "      <td>Roded</td>\n",
+       "      <td>Schach</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1987-06-14</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    emp_no emp_title  birth_date  first_name   last_name sex   hire_date  \\\n",
+       "0   473302     s0001  1953-07-25    Hideyuki    Zallocco   M  1990-04-28   \n",
+       "1   421786     s0001  1957-09-28       Xiong    Verhoeff   M  1987-11-26   \n",
+       "2   273487     s0001  1957-04-14   Christoph     Parfitt   M  1991-06-28   \n",
+       "3   246449     s0001  1958-03-23       Subbu  Bultermann   F  1988-03-25   \n",
+       "4    48085     s0001  1964-01-19  Venkatesan        Gilg   M  1993-06-28   \n",
+       "..     ...       ...         ...         ...         ...  ..         ...   \n",
+       "95  441662     s0001  1964-02-08     Hongzhu     Chenney   F  1992-07-07   \n",
+       "96   41986     s0001  1956-05-11       Conal     Wilfing   F  1985-09-18   \n",
+       "97   11012     s0001  1953-09-12     Taegyun   Speckmann   F  1986-12-28   \n",
+       "98   67762     s0001  1952-07-27      Jeanna   Francisci   F  1985-08-21   \n",
+       "99  484430     s0001  1959-08-10       Roded      Schach   M  1987-06-14   \n",
+       "\n",
+       "    title  salary  \n",
+       "0   Staff   40000  \n",
+       "1   Staff   40000  \n",
+       "2   Staff   56087  \n",
+       "3   Staff   87084  \n",
+       "4   Staff   63016  \n",
+       "..    ...     ...  \n",
+       "95  Staff   56350  \n",
+       "96  Staff   67430  \n",
+       "97  Staff   72092  \n",
+       "98  Staff   43430  \n",
+       "99  Staff   40000  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine_salary = pd.merge(employee_title_combine, salary_data, on=\"emp_no\", how=\"inner\")\n",
+    "combine_salary.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
