--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -860,6 +860,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### renaming the column headers for the combined table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee_Number</th>\n",
+       "      <th>employee_title_code</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>employee_title</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>473302</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-07-25</td>\n",
+       "      <td>Hideyuki</td>\n",
+       "      <td>Zallocco</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-04-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>421786</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-09-28</td>\n",
+       "      <td>Xiong</td>\n",
+       "      <td>Verhoeff</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1987-11-26</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>273487</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-04-14</td>\n",
+       "      <td>Christoph</td>\n",
+       "      <td>Parfitt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1991-06-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>56087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>246449</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1958-03-23</td>\n",
+       "      <td>Subbu</td>\n",
+       "      <td>Bultermann</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1988-03-25</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>87084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48085</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-01-19</td>\n",
+       "      <td>Venkatesan</td>\n",
+       "      <td>Gilg</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993-06-28</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>63016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>476443</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1952-08-27</td>\n",
+       "      <td>Ziya</td>\n",
+       "      <td>Asmuth</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1995-08-24</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>63371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>424270</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1963-01-15</td>\n",
+       "      <td>Kellyn</td>\n",
+       "      <td>Yoshizawa</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1995-05-08</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>60678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>427958</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-05-03</td>\n",
+       "      <td>Feixiong</td>\n",
+       "      <td>Poujol</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-05-11</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>63377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>280408</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-09-19</td>\n",
+       "      <td>Elliott</td>\n",
+       "      <td>Perl</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1987-10-29</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>75963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>229010</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1961-11-12</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>Cappelli</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-05-07</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   employee_Number employee_title_code  birth_date  first_name   last_name  \\\n",
+       "0           473302               s0001  1953-07-25    Hideyuki    Zallocco   \n",
+       "1           421786               s0001  1957-09-28       Xiong    Verhoeff   \n",
+       "2           273487               s0001  1957-04-14   Christoph     Parfitt   \n",
+       "3           246449               s0001  1958-03-23       Subbu  Bultermann   \n",
+       "4            48085               s0001  1964-01-19  Venkatesan        Gilg   \n",
+       "5           476443               s0001  1952-08-27        Ziya      Asmuth   \n",
+       "6           424270               s0001  1963-01-15      Kellyn   Yoshizawa   \n",
+       "7           427958               s0001  1957-05-03    Feixiong      Poujol   \n",
+       "8           280408               s0001  1964-09-19     Elliott        Perl   \n",
+       "9           229010               s0001  1961-11-12        Mark    Cappelli   \n",
+       "\n",
+       "  sex   hire_date employee_title  salary  \n",
+       "0   M  1990-04-28          Staff   40000  \n",
+       "1   M  1987-11-26          Staff   40000  \n",
+       "2   M  1991-06-28          Staff   56087  \n",
+       "3   F  1988-03-25          Staff   87084  \n",
+       "4   M  1993-06-28          Staff   63016  \n",
+       "5   M  1995-08-24          Staff   63371  \n",
+       "6   F  1995-05-08          Staff   60678  \n",
+       "7   F  1985-05-11          Staff   63377  \n",
+       "8   M  1987-10-29          Staff   75963  \n",
+       "9   M  1990-05-07          Staff   40000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine_salary_rename = combine_salary.rename(columns={\"emp_no\": \"employee_Number\", \"emp_title\" : \"employee_title_code\", \"title\" : \"employee_title\"})\n",
+    "combine_salary_rename.head(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
