--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>employee_Number</th>\n",
+       "      <th>employee_number</th>\n",
        "      <th>employee_title_code</th>\n",
        "      <th>birth_date</th>\n",
        "      <th>first_name</th>\n",
@@ -1029,7 +1029,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   employee_Number employee_title_code  birth_date  first_name   last_name  \\\n",
+       "   employee_number employee_title_code  birth_date  first_name   last_name  \\\n",
        "0           473302               s0001  1953-07-25    Hideyuki    Zallocco   \n",
        "1           421786               s0001  1957-09-28       Xiong    Verhoeff   \n",
        "2           273487               s0001  1957-04-14   Christoph     Parfitt   \n",
@@ -1054,15 +1054,151 @@
        "9   M  1990-05-07          Staff   40000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combine_salary_rename = combine_salary.rename(columns={\"emp_no\": \"employee_Number\", \"emp_title\" : \"employee_title_code\", \"title\" : \"employee_title\"})\n",
+    "combine_salary_rename = combine_salary.rename(columns={\"emp_no\": \"employee_number\", \"emp_title\" : \"employee_title_code\", \"title\" : \"employee_title\"})\n",
     "combine_salary_rename.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee_number</th>\n",
+       "      <th>employee_title_code</th>\n",
+       "      <th>employee_title</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>473302</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>Hideyuki</td>\n",
+       "      <td>Zallocco</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1953-07-25</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>421786</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>Xiong</td>\n",
+       "      <td>Verhoeff</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1957-09-28</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>273487</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>Christoph</td>\n",
+       "      <td>Parfitt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1957-04-14</td>\n",
+       "      <td>56087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>246449</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>Subbu</td>\n",
+       "      <td>Bultermann</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1958-03-23</td>\n",
+       "      <td>87084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48085</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>Venkatesan</td>\n",
+       "      <td>Gilg</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1964-01-19</td>\n",
+       "      <td>63016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   employee_number employee_title_code employee_title  first_name   last_name  \\\n",
+       "0           473302               s0001          Staff    Hideyuki    Zallocco   \n",
+       "1           421786               s0001          Staff       Xiong    Verhoeff   \n",
+       "2           273487               s0001          Staff   Christoph     Parfitt   \n",
+       "3           246449               s0001          Staff       Subbu  Bultermann   \n",
+       "4            48085               s0001          Staff  Venkatesan        Gilg   \n",
+       "\n",
+       "  sex  birth_date  salary  \n",
+       "0   M  1953-07-25   40000  \n",
+       "1   M  1957-09-28   40000  \n",
+       "2   M  1957-04-14   56087  \n",
+       "3   F  1958-03-23   87084  \n",
+       "4   M  1964-01-19   63016  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = combine_salary_rename[['employee_number', 'employee_title_code', 'employee_title', 'first_name', 'last_name', 'sex', 'birth_date', 'salary']]\n",
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
