Calculating average salary by title.

--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -1264,7 +1264,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plotting  a bar chart of average salary by title."
+    "#### Calculating average salary by title."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "employee_title\n",
+       "Assistant Engineer    48564.43\n",
+       "Engineer              48535.34\n",
+       "Manager               51531.04\n",
+       "Senior Engineer       48506.80\n",
+       "Senior Staff          58550.17\n",
+       "Staff                 58465.38\n",
+       "Technique Leader      48582.90\n",
+       "Name: salary, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_sal_by_title = new_df.groupby(['employee_title'])['salary'].mean()\n",
+    "avg_sal_by_title.round(2)"
    ]
   },
   {
