Epilogue : Searching for my ID number = 499942

--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -1235,7 +1235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Saving the histogram image"
+    "#### Save the histogram image"
    ]
   },
   {
@@ -1414,6 +1414,111 @@
     "plt.xlabel(\"\\nEMPLOYEE TITLES\", weight=\"bold\", size=10)\n",
     "\n",
     "plt.title(\"AVERAGE EMPLOYEE SALARY BY TITLE\\n\", weight=\"bold\", size=12)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the bar graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.savefig(\"./Images/avg_emp_salary_title.png\")\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Epilogue : Searching for my ID number = 499942"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee_number</th>\n",
+       "      <th>employee_title_code</th>\n",
+       "      <th>employee_title</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>287532</th>\n",
+       "      <td>499942</td>\n",
+       "      <td>e0004</td>\n",
+       "      <td>Technique Leader</td>\n",
+       "      <td>April</td>\n",
+       "      <td>Foolsday</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1963-01-10</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        employee_number employee_title_code    employee_title first_name  \\\n",
+       "287532           499942               e0004  Technique Leader      April   \n",
+       "\n",
+       "       last_name sex  birth_date  salary  \n",
+       "287532  Foolsday   F  1963-01-10   40000  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.query('employee_number == 499942')"
    ]
   },
   {
