Re-saved the salary range emlpoyees png image

--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -1197,12 +1197,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plotting histogram of common salary ranges for employees"
+    "#### Plotting histogram of common salary ranges for employees & saving image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,15 @@
     "plt.title(\"SALARY RANGE FOR EMPLOYEES\\n\", weight=\"bold\", size=15)\n",
     "\n",
     "plt.grid()\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig(\"./Images/salary_range_employees_try.png\")\n",
+    "import os\n",
+    "\n",
+    "# Save the figure\n",
+    "#output_path = os.path.join(\".\", \"images\", \"salary_range_employees.png\")\n",
+    "#plt.savefig(output_path)\n",
+    "#plt.show()"
    ]
   },
   {
@@ -1236,28 +1244,6 @@
    "metadata": {},
    "source": [
     "#### Save the histogram image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.savefig(\"./Images/salary_range_employees.png\")\n",
-    "\n",
-    "# Show plot\n",
-    "plt.show()"
    ]
   },
   {
@@ -1425,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
