Deleted the bar chart and resaved it

--- a/SQLpanda.ipynb
+++ b/SQLpanda.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sqlalchemy import create_engine\n",
+    "import os\n",
     "\n",
     "from config import password\n",
     "from config import username\n",
@@ -1202,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1230,20 +1231,11 @@
     "plt.grid()\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(\"./Images/salary_range_employees_try.png\")\n",
-    "import os\n",
     "\n",
-    "# Save the figure\n",
-    "#output_path = os.path.join(\".\", \"images\", \"salary_range_employees.png\")\n",
-    "#plt.savefig(output_path)\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Save the histogram image"
+    "#Save the figure\n",
+    "output_path = os.path.join(\".\", \"images\", \"salary_range_employees.png\")\n",
+    "plt.savefig(output_path)\n",
+    "plt.show()"
    ]
   },
   {
